# zk0.99c

./: .gitignore  Cargo.toml  README.md  run.sh  test.py  xmake.lua
NTT/src/: NTT.cuh
NTT/test/: main.cu
NTT/tests/: generate_ntt_sample.py  main.cu  test-big.cu  test-int.cu
compiler/src/: ast.rs  heap.rs  lib.rs  transit.rs
doc/: book.toml
doc/src/: SUMMARY.md  benchmark.md  bind.md  halo2.md  memory_layout.md  ntt.md
include/cgbn/: cgbn.cu  cgbn.h  cgbn_cuda.h  impl_cuda.cu
mont/src/: alt_bn128_fq.cuh  alt_bn128_fr.cuh  bls12377_fq.cuh  bls12377_fr.cuh  bls12381_fq.cuh  bls12381_fr.cuh  bn254_fr.cuh  bn254_scalar.cuh  bn256_fr.cuh  field.cuh  field2.cuh  field_tc.cuh  gen_asm.py  mnt4753_fq.cuh  mnt4753_fr.cuh  mont.cuh.template  ptx.cuh  storage.cuh
mont/tests/: bench.cu  bench0.cu  debug_tc.cu  fuzz.cu  generate_sample.py  main.cu
msm/: cost_model.py
msm/src/: alt_bn128.cuh  bls12377.cuh  bls12381.cuh  bn254.cuh  cost_model.py  curve.cuh  curve_xyzz.cuh  mnt4753.cuh  msm.cuh  msm_bay.cuh  msm_impl.cuh  msm_impl_1.cuh  msm_no_scatter.cuh  msm_radix_sort.cuh  msm_radix_sort_old.cuh  msm_shared_scatter_new.cuh  msm_thread_add.cuh  msm_update_scatter.cuh
ntt/: xmake.lua
poly/: xmake.lua
utils/: bench_numpy.py  common.py  compute_theoretical_time.py  cost_model.py  draw_validation.py  generate_ec_point.py  generate_mont_sample.py  generate_msm_problem.py  get_exec_time.py  model.ipynb  to_mont.py
wrapper/: xmake.lua
wrapper/msm/rust_api/: Cargo.toml  build.rs
wrapper/msm/rust_api/src/: lib.rs
wrapper/msm/rust_api/tests/: msm.rs
(+248 files in other folders)
