[package]
name = "zk0d99c_msm"
version = "0.1.0"
edition = "2021"

[dependencies]
group = "0.13"
# zk0d99c_cuda_api = { path = "../../cuda_api/rust_api" }

[build-dependencies]
bindgen = "0.69.4"

[dev-dependencies]
ff = "0.13"
group = "0.13"
halo2curves = { version = "0.6.0", default-features = false }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git ", tag = "v0.3.0", features =  ["circuit-params", "derive_serde"] }
rand_core = { version = "0.6", default-features = false }
rayon = "1.10"
rand_xorshift = "0.3.0"